--- a/style/main.css
+++ b/style/main.css
@@ -100,8 +100,9 @@ html {
   justify-content: space-between;
 }
 #logo img {
-  width: 130px;
-  height: 120px;
+  width: 160px;
+  height: 148px;
+  aspect-ratio: 1.08 / 1;
 }
 .pallet {
   display: flex;
@@ -109,7 +110,7 @@ html {
   flex-direction: column;
   align-items: center;
 }
-.pallet svg{
+.pallet svg {
   margin-bottom: 10px;
   width: 30px;
   height: 30px;
@@ -183,6 +184,7 @@ aside span {
 #home .me {
   width: 240px;
   height: 450px;
+  aspect-ratio: 8/15;
   margin-right: 50px;
   border-radius: 15px;
 }
