--- a/style/main.css
+++ b/style/main.css
@@ -144,7 +144,7 @@ aside {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 7%;
+  width: 4%;
   font-size: 32px;
   margin: 0 15px 0 0;
   text-align: center;
@@ -158,6 +158,7 @@ aside {
 }
 aside a {
   transition: 0.5s ease;
+  margin: 30px 0;
 }
 aside a:hover {
   transform: translateX(-10px);
@@ -165,16 +166,20 @@ aside a:hover {
 .sochial i,
 aside i {
   color: var(--golden-color);
-  margin: 20px 0;
   transition: 0.7s ease;
   cursor: url(../images/cursoji-upside-down-face-pointer.webp), auto;
+}.sochial i{
+  margin: 20px 0;
 }
-
 .sochial span,
 aside span {
   color: var(--golden-color);
   font-size: 15px;
   cursor: url(../images/cursoji-upside-down-face-pointer.webp), auto;
+}
+aside a span{
+  display: block;
+  margin-bottom: -10px;
 }
 .home {
   display: flex;
