--- a/style/main.css
+++ b/style/main.css
@@ -168,7 +168,8 @@ aside i {
   color: var(--golden-color);
   transition: 0.7s ease;
   cursor: url(../images/cursoji-upside-down-face-pointer.webp), auto;
-}.sochial i{
+}
+.sochial i {
   margin: 20px 0;
 }
 .sochial span,
@@ -177,7 +178,7 @@ aside span {
   font-size: 15px;
   cursor: url(../images/cursoji-upside-down-face-pointer.webp), auto;
 }
-aside a span{
+aside a span {
   display: block;
   margin-bottom: -10px;
 }
@@ -207,13 +208,13 @@ aside a span{
   margin-bottom: 30px;
   margin-left: 5px;
 } */
-.text .type {
-  width: 400px;
+.text img {
+  /* width: 400px;0 */
   display: block;
   margin-bottom: 30px;
   fill: var(--golden-color);
 }
-.text a {
+.text .contact {
   padding: 15px 20px;
   font-size: 20px;
   color: var(--golden-color);
@@ -520,6 +521,7 @@ aside a span{
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  padding-bottom: 70px;
 }
 
 .form-container form {
@@ -724,7 +726,7 @@ form a:hover {
 /* ======= end contact ======= */
 
 /* ======= start copyright ======= */
-.copyright p {
+/* .copyright p {
   text-align: center;
   font-size: 20px;
   margin: 10px;
@@ -741,7 +743,7 @@ form a:hover {
   margin: 15px 10px;
   transition: 0.7s ease;
   font-size: 30px;
-}
+} */
 /* ======= end copyright ======= */
 
 /* ======= start toggle ======= */
@@ -835,17 +837,23 @@ nav ul span {
     margin-top: 30px;
   }
   #home .text a {
+    display: block;
+    margin: auto;
+    width: 60%;
+  }
+  #home .text .contact {
     display: none;
   }
   .mh-skills-inner {
     width: 85%;
+    margin: auto;
   }
   .professional-skills {
-    width: 80%;
-    margin-top: 50px;
+    width: 82%;
+    margin: 50px auto;
   }
   .professional-skills li {
-    margin-left: 10px;
+    margin-left: 14px;
   }
 }
 
