--- a/style/main.css
+++ b/style/main.css
@@ -196,7 +196,6 @@ aside a span {
   border-radius: 15px;
 }
 .text h2 {
-  display: inline-block;
   text-transform: capitalize;
   font-weight: 700;
   font-size: 50px;
@@ -208,12 +207,14 @@ aside a span {
   margin-bottom: 30px;
   margin-left: 5px;
 } */
-.text img {
-  /* width: 400px; */
+.text a {
+  width: 400px;
   display: block;
   margin-bottom: 30px;
+  fill: var(--golden-color);
 }
-.text a {
+.text .contact {
+  width: fit-content;
   padding: 15px 20px;
   font-size: 20px;
   color: var(--golden-color);
@@ -244,6 +245,7 @@ aside a span {
 }
 .mh-skills-inner {
   width: 45%;
+  margin: auto;
 }
 .mh-skills .mh-professional-skill {
   color: var(--gridiant-color);
@@ -520,6 +522,7 @@ aside a span {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  padding-bottom: 70px;
 }
 
 .form-container form {
@@ -577,150 +580,6 @@ textarea::placeholder {
     justify-content: space-between;
   }
 }
-/* .form-container {
-  width: 400px;
-  background: linear-gradient(#212121, #212121) padding-box, linear-gradient(145deg, transparent 35%, #e81cff, #40c9ff) border-box;
-  border: 2px solid transparent;
-  padding: 32px 24px;
-  font-size: 14px;
-  font-family: inherit;
-  color: white;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  box-sizing: border-box;
-  border-radius: 16px;
-  margin: 20px 0;
-}
-
-.form-container button:active {
-  scale: 0.95;
-}
-
-.form-container .form {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-.form-container .form-group {
-  display: flex;
-  flex-direction: column;
-  gap: 2px;
-}
-
-.form-container .form-group label {
-  display: block;
-  margin-bottom: 5px;
-  color: #717171;
-  font-weight: 600;
-  font-size: 12px;
-}
-
-.form-container .form-group input {
-  width: 100%;
-  padding: 12px 16px;
-  border-radius: 8px;
-  color: #fff;
-  font-family: inherit;
-  background-color: transparent;
-  border: 1px solid #414141;
-}
-
-.form-container .form-group textarea {
-  width: 100%;
-  padding: 12px 16px;
-  border-radius: 8px;
-  resize: none;
-  color: #fff;
-  height: 96px;
-  border: 1px solid #414141;
-  background-color: transparent;
-  font-family: inherit;
-}
-
-.form-container .form-group input::placeholder {
-  opacity: 0.5;
-}
-
-.form-container .form-group input:focus {
-  outline: none;
-  border-color: #e81cff;
-}
-
-.form-container .form-group textarea:focus {
-  outline: none;
-  border-color: #e81cff;
-}
-
-.form-container .form-submit-btn {
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  align-self: flex-start;
-  font-family: inherit;
-  color: #fff;
-  font-weight: 600;
-  width: 40%;
-  background: #313131;
-  border: 1px solid #414141;
-  padding: 12px 16px;
-  font-size: inherit;
-  gap: 8px;
-  margin-top: 8px;
-  cursor: pointer;
-  border-radius: 6px;
-}
-
-.form-container .form-submit-btn:hover {
-  background-color: #fff;
-  border-color: #fff;
-  color: #313131;
-} */
-
-/* form {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 55%;
-  margin: auto;
-}
-form input {
-  width: 100%;
-  padding: 5px;
-  border: 1px solid var(--id-color);
-  outline: none;
-  margin: 15px 0;
-  height: 50px;
-  border-radius: 5px;
-  background-color: #dddddd;
-}
-textarea {
-  width: 100%;
-  padding: 5px;
-  height: 150px;
-  border-radius: 5px;
-  border: 1px solid var(--id-color);
-  background-color: #dddddd;
-  font-size: 20px;
-}
-form input:focus,
-textarea:focus {
-  box-shadow: 0 0 8px var(--id-color);
-}
-form a {
-  padding: 10px 15px;
-  border-radius: 5px;
-  margin: 15px;
-  font-size: 20px;
-  border: 1px solid var(--id-color);
-  color: var(--golden-color);
-}
-form a:hover {
-  background: var(--id-color);
-  color: #fff;
-} */
 /* ======= end contact ======= */
 
 /* ======= start copyright ======= */
@@ -836,6 +695,10 @@ nav ul span {
   }
   #home .text .contact {
     display: none;
+  }
+  #home .text img {
+    width: 85%;
+    margin-left: 70px;
   }
   .mh-skills-inner {
     width: 85%;
